@@ -33,6 +33,8 @@ ranef(obj_unbal_ind)
 ranef(obj_unbal_time)
 
 ## two-way balanced
-# obj_bal_tw  <- plm(sales ~ pop + price, data = Cigar, model = "random", effect = "twoways") # gives positive estimate for theta
-# summary(obj_bal_tw)
-# ranef(obj_bal_tw)
+obj_bal_tw  <- plm(sales ~ pop + price, data = Cigar, model = "random", effect = "twoways") # gives positive estimate for theta
+summary(obj_bal_tw)
+ranef(obj_bal_tw)
+ranef(obj_bal_tw, effect = "individual") # same as line before
+ranef(obj_bal_tw, effect = "time")
