@@ -241,10 +241,87 @@ F-statistic: 14.3869 on 1 and 1377 DF, p-value: 0.00015528
  -6.0557382  -8.6560816 -11.8598359 -15.1564003 -17.0858090 -17.7363679 
 > 
 > ## two-way balanced
-> # obj_bal_tw  <- plm(sales ~ pop + price, data = Cigar, model = "random", effect = "twoways") # gives positive estimate for theta
-> # summary(obj_bal_tw)
-> # ranef(obj_bal_tw)
+> obj_bal_tw  <- plm(sales ~ pop + price, data = Cigar, model = "random", effect = "twoways") # gives positive estimate for theta
+> summary(obj_bal_tw)
+Twoways effects Random Effect Model 
+   (Swamy-Arora's transformation)
+
+Call:
+plm(formula = sales ~ pop + price, data = Cigar, effect = "twoways", 
+    model = "random")
+
+Balanced Panel: n = 46, T = 30, N = 1380
+
+Effects:
+                  var std.dev share
+idiosyncratic 174.696  13.217 0.215
+individual    628.862  25.077 0.773
+time           10.413   3.227 0.013
+theta: 0.9042 (id) 0.483 (time) 0.4819 (total)
+
+Residuals:
+   Min. 1st Qu.  Median 3rd Qu.    Max. 
+-58.600  -6.720   0.156   5.670 128.000 
+
+Coefficients:
+               Estimate  Std. Error  t-value Pr(>|t|)    
+(Intercept)  1.4052e+02  4.5154e+00  31.1196   <2e-16 ***
+pop         -1.9055e-05  4.4084e-04  -0.0432   0.9655    
+price       -2.3989e-01  1.7855e-02 -13.4355   <2e-16 ***
+---
+Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+
+Total Sum of Squares:    311890
+Residual Sum of Squares: 273640
+R-Squared:      0.12261
+Adj. R-Squared: 0.12134
+F-statistic: 96.2167 on 2 and 1377 DF, p-value: < 2.22e-16
+> ranef(obj_bal_tw)
+          1           3           4           5           7           8 
+-16.2313983 -10.9407671  -8.4070839  -8.0035988  -3.5394647  26.4991483 
+          9          10          11          13          14          15 
+ 39.7177104   3.8777211  -5.1844126 -19.6522390   2.6503121  16.3006653 
+         16          17          18          19          20          21 
+-11.6829305 -11.4349650  52.1389070   0.1959530  10.1000599  -0.7371054 
+         22          23          24          25          26          27 
+ -2.5582962   6.0052270 -13.9084124 -15.9415817   7.2335306 -13.1071681 
+         28          29          30          31          32          33 
+-16.2253164  50.1149877 110.3969356  -1.5881308 -31.7198448  -2.6728683 
+         35          36          37          39          40          41 
+-19.5275399   1.7670879  -3.3623632  -8.4818063  11.7369530  -6.5745407 
+         42          43          44          45          46          47 
+-20.8494465  -5.4741136 -11.0335402 -55.6627609  16.3784126   7.7327316 
+         48          49          50          51 
+-25.6449876  -9.0717648 -14.3557950  10.7278996 
+> ranef(obj_bal_tw, effect = "individual") # same as line before
+          1           3           4           5           7           8 
+-16.2313983 -10.9407671  -8.4070839  -8.0035988  -3.5394647  26.4991483 
+          9          10          11          13          14          15 
+ 39.7177104   3.8777211  -5.1844126 -19.6522390   2.6503121  16.3006653 
+         16          17          18          19          20          21 
+-11.6829305 -11.4349650  52.1389070   0.1959530  10.1000599  -0.7371054 
+         22          23          24          25          26          27 
+ -2.5582962   6.0052270 -13.9084124 -15.9415817   7.2335306 -13.1071681 
+         28          29          30          31          32          33 
+-16.2253164  50.1149877 110.3969356  -1.5881308 -31.7198448  -2.6728683 
+         35          36          37          39          40          41 
+-19.5275399   1.7670879  -3.3623632  -8.4818063  11.7369530  -6.5745407 
+         42          43          44          45          46          47 
+-20.8494465  -5.4741136 -11.0335402 -55.6627609  16.3784126   7.7327316 
+         48          49          50          51 
+-25.6449876  -9.0717648 -14.3557950  10.7278996 
+> ranef(obj_bal_tw, effect = "time")
+        63         64         65         66         67         68         69 
+-4.8730347 -7.3464635 -5.9340750 -5.1545167 -4.9379129 -5.9884844 -6.6989482 
+        70         71         72         73         74         75         76 
+-8.2130475 -5.6496310 -2.2865468 -0.9936552  1.3543836  3.0309237  5.7378570 
+        77         78         79         80         81         82         83 
+ 5.6665356  6.4982251  5.3839356  6.2673107  6.9524675  6.8306273  5.2637423 
+        84         85         86         87         88         89         90 
+ 3.0305218  2.9219323  2.3839785  1.3038537  0.2722306 -1.0413612 -1.9688282 
+        91         92 
+-2.3758022  0.5637823 
 > 
 > proc.time()
    user  system elapsed 
-   2.85    0.14    2.98 
+   3.05    0.10    3.15 
